<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uploadDetails"
    android:background="#101010">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/rect_image"/>
    <LinearLayout
        android:id="@+id/headingLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginVertical="38dp">
        <TextView
            android:id="@+id/heading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_get_you_signed_uppp"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="#7E0F02"
            android:layout_marginBottom="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_marginHorizontal="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:paddingHorizontal="15dp">
        <LinearLayout
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="10dp">

            <EditText
                android:id="@+id/mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginVertical="5dp"
                android:hint="@string/enter_mail"
                android:textSize="20sp"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginBottom="5dp"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:paddingVertical="10dp"
                android:hint="@string/enter_phone_number"
                android:textSize="20sp"
                android:background="@drawable/edittext_background"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:layout_marginBottom="5dp"
                android:inputType="number"/>
            <EditText
                android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="10dp"
                android:layout_marginVertical="5dp"
                android:hint="Password"
                android:textSize="20sp"
                android:background="@drawable/edittext_background"
                android:inputType="textPassword"
                android:paddingHorizontal="20dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/black"
                android:textColorHint="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="5dp"/>
        </LinearLayout>
        <RadioGroup
            android:id="@+id/gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="10dp">
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:layout_weight="1"/>
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:layout_weight="1"/>
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/submit"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/button_with_maroon"/>

        <ProgressBar
            android:id="@+id/progressBarSubmitOtp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>

    </LinearLayout>
</RelativeLayout>