<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:overScrollMode="never"
    android:background="@drawable/background_7"
    tools:context=".otpVerification">

    <LinearLayout
        android:id="@+id/containerOtp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/messageImage"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="88dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/micon"/>
        <TextView
            android:id="@+id/headingOtp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="OTP Verification"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/subtextOtp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="Please Enter OTP sent to you"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/subtextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:textSize="14sp"/>

        <LinearLayout
            android:id="@+id/otpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/numberOne"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otp_box_background100"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginHorizontal="2dp"/>

            <EditText
                android:id="@+id/numberTwo"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otp_box_background100"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginHorizontal="2dp"/>

            <EditText
                android:id="@+id/numberThree"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otp_box_background100"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginHorizontal="2dp"/>

            <EditText
                android:id="@+id/numberFour"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otp_box_background100"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginHorizontal="2dp"/>
            <EditText
                android:id="@+id/numberFive"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otp_box_background100"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginHorizontal="2dp"/>

            <EditText
                android:id="@+id/numberSix"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/otp_box_background100"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:maxLength="1"
                android:inputType="number"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="24sp"
                android:layout_marginHorizontal="2dp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/resendOtpContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/questionOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Didn't received the OTP ??"
                android:textSize="14dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/resend_otp"
                android:layout_marginLeft="8sp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:padding="15dp"
                android:background="@drawable/transparent_backgroud"
                android:textStyle="bold"/>
        </LinearLayout>
        <Button
            android:id="@+id/verifyOtp"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/verify"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/submit_color_with_frame1000"/>
        <ProgressBar
            android:id="@+id/progressBarverifyOtp"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </LinearLayout>
</ScrollView>